<resources>
    <string name="appversion">Version 1.23.0</string>
    <string name="termcond">Privacy Policys</string>
    <string name="url_down">http://baraluftvapen.se/tmp/uploads/blom_update21.txt</string>
    <string name="url_up">http://baraluftvapen.se/tmp/UploadToServer.php</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pick_month">Välj blomningstid</string>
    <string name="pick_region">Välj region</string>
    <string name="pick_family">Välj familj/kategori</string>
    <string name="pick_color">Välj färg på blomma</string>
    <string name="r1">Gotlands län</string>
    <string name="r2">Gotlands län</string>
    <string name="ra">Skåne län</string>
    <string name="rb">Blekinge län</string>
    <string name="rc">Hallands län</string>
    <string name="rd">Kalmar län</string>
    <string name="re">Kronobergs län</string>
    <string name="rf">Västra Götalands län</string>
    <string name="rg">Jönköpings län</string>
    <string name="rh">Östergötalands län</string>
    <string name="ri">Örebro län</string>
    <string name="rj">Södermanlands län</string>
    <string name="rk">Stockholms län</string>
    <string name="rl">Uppsala län</string>
    <string name="rm">Västmanlands län</string>
    <string name="rn">Värmlands län</string>
    <string name="ro">Dalarnas län</string>
    <string name="rp">Gävleborgs län</string>
    <string name="rq">Västernorrlands län</string>
    <string name="rr">Jämtlands län</string>
    <string name="rs">Västerbottens län</string>
    <string name="rt">Norrbottens län</string>
    <string name="busk">Buskar</string>
    <string name="land">Landskapsblommor</string>
    <string name="trad">Träd</string>
    <string name="fjall">Fjällväxter</string>
    <string name="prydnad">Prydnadsväxter</string>
    <string name="vat">Vattenväxter</string>
    <string name="tistlar">Tistlar</string>
    <string name="klang">Klängväxter</string>
    <string name="fibblor">Fibblor</string>
    <string name="alm">Almväxter</string>
    <string name="ara">Araliaväxter</string>
    <string name="bal">Balsaminväxter</string>
    <string name="ber">Berberisväxter</string>
    <string name="ben">Benvedsväxter</string>
    <string name="bla">Blågullsväxter</string>
    <string name="bok">Bokväxter</string>
    <string name="bjo">Björkväxter</string>
    <string name="bra">Brakvedsväxter</string>
    <string name="cyp">Cypressväxter</string>
    <string name="des">Desmeknoppväxter</string>
    <string name="dun">Dunörtsväxter</string>
    <string name="fack">Fackelsblomsväxter</string>
    <string name="flo">Flockblommiga växter</string>
    <string name="fet">Fetbladsväxter</string>
    <string name="frak">Fräkenväxter</string>
    <string name="gen">Gentianaväxter</string>
    <string name="gro">Grobladsväxter</string>
    <string name="ham">Hampväxter</string>
    <string name="har">Harsyreväxter</string>
    <string name="has">Hasselväxter</string>
    <string name="hav">Havtornsväxter</string>
    <string name="ide">Idegransväxter</string>
    <string name="iris">Irisväxter</string>
    <string name="joh">Johannesörtväxter</string>
    <string name="jord">Jordröksväxter</string>
    <string name="jung">Jungfrulinväxter</string>
    <string name="kap">Kaprifolväxter</string>
    <string name="kall">Kallaväxter</string>
    <string name="kavel">Kaveldunväxter</string>
    <string name="kines">Kinesträdsväxter</string>
    <string name="klock">Klockväxter</string>
    <string name="kon">Konvaljväxter</string>
    <string name="korg">Korgblommiga växter</string>
    <string name="kor">Kornellväxter</string>
    <string name="kors">Korsblommiga växter</string>
    <string name="krans">Kransblommiga växter</string>
    <string name="lej">Lejongapväxter</string>
    <string name="lil">Liljeväxter</string>
    <string name="linn">Linneaväxter</string>
    <string name="lin">Linväxter</string>
    <string name="lju">Ljungväxter</string>
    <string name="lumm">Lummerväxter</string>
    <string name="lok">Lökväxter</string>
    <string name="las">Låsbräkenväxter</string>
    <string name="mal">Malväxter</string>
    <string name="mall">Mållväxter</string>
    <string name="malva">Malvaväxter</string>
    <string name="mar">Måreväxter</string>
    <string name="myr">Myrliljeväxter</string>
    <string name="nej">Nejlikväxter</string>
    <string name="nak">Näckrosväxter</string>
    <string name="nas">Nässelväxter</string>
    <string name="nav">Näveväxter</string>
    <string name="ole">Oleanderväxter</string>
    <string name="ork">Orkideér</string>
    <string name="orm">Ormbunksväxter</string>
    <string name="pors">Porsväxter</string>
    <string name="pot">Potatisväxter</string>
    <string name="ran">Ranunkelväxter</string>
    <string name="res">Resedaväxter</string>
    <string name="rip">Ripsväxter</string>
    <string name="ros">Rosväxter</string>
    <string name="sil">Silehårsväxter</string>
    <string name="sli">Slideväxter</string>
    <string name="sand">Sandelträdväxter</string>
    <string name="sol">Solvändeväxter</string>
    <string name="spa">Sparrisväxter</string>
    <string name="sny">Snyltrotsväxter</string>
    <string name="sten">Stenbräckeväxter</string>
    <string name="stra">Strävbladiga växter</string>
    <string name="sva">Svaltingväxter</string>
    <string name="syr">Syrenväxter</string>
    <string name="tall">Tallväxter</string>
    <string name="tib">Tibastväxter</string>
    <string name="tre">Trebladsväxter</string>
    <string name="tri">Triftväxter</string>
    <string name="tat">Tätörtväxter</string>
    <string name="tor">Törelväxter</string>
    <string name="vall">Vallmoväxter</string>
    <string name="vatt">Vattenklöversväxter</string>
    <string name="vide">Videväxter</string>
    <string name="vin">Vindeväxter</string>
    <string name="viol">Violväxter</string>
    <string name="viv">Viveväxter</string>
    <string name="vadd">Väddväxter</string>
    <string name="vand">Vänderotväxter</string>
    <string name="art">Ärtväxter</string>
    <string name="Araliavaxter">ara</string>
    <string name="Balsaminvaxter">bal</string>
    <string name="Blagullsvaxter">bla</string>
    <string name="Buskar">busk</string>
    <string name="Trad">trad</string>
    <string name="Landskapsblommor">land</string>
    <string name="Tistlar">tistlar</string>
    <string name="Klangvaxter">klang</string>
    <string name="Fibblor">fibblor</string>
    <string name="Fjallvaxter">fjall</string>
    <string name="Prydnadsvaxter">prydnad</string>
    <string name="Desmeknoppvaxter">des</string>
    <string name="Dunortsvaxter">dun</string>
    <string name="Fackelsblomsvaxter">fack</string>
    <string name="Flockblommiga">flo</string>
    <string name="Fetbladsvaxter">fet</string>
    <string name="Gentianavaxter">gen</string>
    <string name="Grobladsvaxter">gro</string>
    <string name="Hampvaxter">ham</string>
    <string name="Harsyrevaxter">har</string>
    <string name="Hasselvaxter">has</string>
    <string name="Irisvaxter">iris</string>
    <string name="Johannesortvaxter">joh</string>
    <string name="Jordroksvaxter">jord</string>
    <string name="Jungfrulinvaxter">jung</string>
    <string name="Kaprifolvaxter">kap</string>
    <string name="Vattenvaxter">vat</string>
    <string name="Klockvaxter">klock</string>
    <string name="Konvaljvaxter">kon</string>
    <string name="Korgblommiga">korg</string>
    <string name="Kornellvaxter">kor</string>
    <string name="Korsblommiga">kors</string>
    <string name="Kransblommiga">krans</string>
    <string name="Lejongapvaxter">lej</string>
    <string name="Linneavaxter">linn</string>
    <string name="Linvaxter">lin</string>
    <string name="Liljevaxter">lil</string>
    <string name="Ljungvaxter">lju</string>
    <string name="Lokvaxter">lok</string>
    <string name="Malvaxter">mal</string>
    <string name="Mallvaxter">mall</string>
    <string name="Marevaxter">mar</string>
    <string name="Myrliljevaxter">myr</string>
    <string name="Nejlikvaxter">nej</string>
    <string name="Nackrosvaxter">nack</string>
    <string name="Nasselvaxter">nas</string>
    <string name="Navevaxter">nav</string>
    <string name="Oleandervaxter">ole</string>
    <string name="Orkideer">ork</string>
    <string name="Potatisvaxter">pot</string>
    <string name="Ranunkelvaxter">ran</string>
    <string name="Resedavaxter">res</string>
    <string name="Rosvaxter">ros</string>
    <string name="Sileharsvaxter">sil</string>
    <string name="Slidevaxter">sli</string>
    <string name="Sandeltradvaxter">sand</string>
    <string name="Solvandevaxter">sol</string>
    <string name="Sparrisvaxter">spa</string>
    <string name="Snyltrotsvaxter">sny</string>
    <string name="Stenbrackevaxter">sten</string>
    <string name="Stravbladiga">stra</string>
    <string name="Svaltingvaxter">sva</string>
    <string name="Syrenvaxter">syr</string>
    <string name="Tibastvaxter">tib</string>
    <string name="Trebladsvaxter">tre</string>
    <string name="Triftvaxter">tri</string>
    <string name="Tatortvaxter">tat</string>
    <string name="Torelvaxter">tor</string>
    <string name="Vallmovaxter">vall</string>
    <string name="Vattenkloversvaxter">vatt</string>
    <string name="Vindevaxter">vin</string>
    <string name="Violvaxter">viol</string>
    <string name="Vivevaxter">viv</string>
    <string name="Vaddvaxter">vadd</string>
    <string name="Vanderotvaxter">vand</string>
    <string name="Artvaxter">art</string>
    <string name="Tallvaxter">tall</string>
    <string name="Videvaxter">vide</string>
    <string name="Kinestradsvaxter">kines</string>
    <string name="info3">För att få den senaste version av databasen (all textinformation om en blomma), krävs internetuppkoppling. Senaste databasversionen kommer alltid vara inkluderad i en app-uppdatering.</string>
    <string name="info2">Appen har inspirerats av Wikipedia, planen är att användare som du ska kunna redigera all information om en blomma för att få en så bra databas som möjligt. För tillfället är det bara möjligt att redigera blommans beskrivning. Beroende på hur populärt det blir med bidragandet, så kommer man även i framtiden kunna redigera all information om en blomma samt lägga till bilder och eventuellt en topplista vem som har bidragit mest. </string>
    <string name="info1">Tack för att du har laddat ner och installerat denna app. Det finns mer än 500 stycken växter i denna app med illustrerade bilder.</string>
    <string name="info6">Jag som har gjort appen har inga kunskaper inom botanik och att det finns risk att förekommer fel i växternas egenskaper eller beskrivningar.</string>
    <string name="kalla1">\u2022 Franz Eugen Köhler, Köhlers Medizinal-Pflanzen</string>
    <string name="kalla2">\u2022 Jacob Sturm, Flora von Deutschland in Abbildungen nach der Natur</string>
    <string name="kalla3">\u2022 Carl Lindman, Bilder ur Nordens flora</string>
    <string name="kalla4">\u2022 SLU ArtDatabanken, www.artdatabanken.se/</string>
    <string name="kalla5">\u2022 Den virtuella floran, http://linnaeus.nrm.se/flora/</string>
    <string name="kalla6">\u2022 Ivar Elvers, Vår flora i färg</string>
    <string name="kalla7">\u2022 Nordstedts, Lilla fälthandboken Träd och Buskar</string>
    <string name="kalla8">\u2022 Nordstedts, Lilla fälthandboken Flora</string>
    <string name="kalla9">\u2022 Bolin von Post, Floran i färg</string>
    <string name="kalla10">\u2022 Björn Ursing, Svenska växter, Panergamer</string>
    <string name="kalla10b">\u2022 Björn Ursing, Svenska växter, Kryptogamer</string>
    <string name="kalla11">\u2022 Nybloms, Hälsoflora</string>
    <string name="kalla12">\u2022 Jan Kops, Flora Batava</string>
    <string name="kalla13">\u2022 J.C. Krauss, Afbeeldingen der artseny-gewassen met dervelver Nederduitsche</string>
</resources>