<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#ffffff"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info1"
            android:paddingStart="5dp"
            android:textSize="14sp"
            android:layout_gravity="start"
            android:id="@+id/info1"
            android:background="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info2"
            android:paddingTop="15dp"
            android:paddingStart="5dp"
            android:textSize="14sp"
            android:id="@+id/info9"
            android:background="#ffffff" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info6"
            android:paddingTop="15dp"
            android:paddingStart="5dp"
            android:textSize="14sp"
            android:id="@+id/info6"
            android:background="#ffffff" />
<!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info5"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:textSize="14sp"
            android:id="@+id/info5"
            android:background="#ffffff" />
-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info3"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:textSize="14sp"
            android:id="@+id/info3"
            android:background="#ffffff" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sprid intresset för våra svenska växter, genom att tipsa andra om denna app."
            android:paddingStart="5dp"
            android:gravity="bottom"
            android:textSize="14sp"
            android:id="@+id/share_des"
            android:background="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dela app"
            android:paddingStart="5dp"
            android:textSize="14sp"
            android:onClick="share"
android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="bottom"
            android:id="@+id/share"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appversion"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:textSize="14sp"
            android:gravity="bottom"
            android:id="@+id/appversion"
            android:background="#ffffff" />

        <!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataversion"
            android:paddingStart="5dp"
            android:gravity="bottom"
            android:textSize="14sp"
            android:id="@+id/dataversion"
            android:background="#ffffff" />
-->

    </LinearLayout>

</RelativeLayout>
</ScrollView>